Add usage of CloudyGameStateAPI into the project for shooting ahd sprinting states

--- a/SurvivalGame/Config/DefaultGame.ini
+++ b/SurvivalGame/Config/DefaultGame.ini
@@ -10,5 +10,13 @@ ProjectName=Survival Sample Game
 ProjectVersion=
 SupportContact=
 ProjectDisplayedTitle=Survival SampleGame
+MaxFPS=60
+NumOfPlayers=2
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_DebugGame
+ForDistribution=True
+IncludeDebugFiles=False
+UsePakFile=False
+FullRebuild=False
 
