--- a/SurvivalGame/SurvivalGame.uproject
+++ b/SurvivalGame/SurvivalGame.uproject
@@ -13,5 +13,14 @@
 				"UMG"
 			]
 		}
+	],
+	"Plugins": [
+		{
+			"Name": "CloudyGamePlugin",
+			"Enabled": true
+		}
+	],
+	"TargetPlatforms": [
+		"WindowsNoEditor"
 	]
 }
