Added a circle as a cursor to test for mouse movement and clicks

--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -18,7 +18,7 @@ LocalPlayerClassName=/Script/SurvivalGame.SLocalPlayer
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
-DefaultCursor=None
+DefaultCursor=/Engine/VREditor/UI/VRRadialCrosshair.VRRadialCrosshair_C
 TextEditBeamCursor=None
 CrosshairsCursor=None
 GrabHandCursor=None
@@ -113,8 +113,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/MainMenu_Entry
+GameDefaultMap=/Game/Maps/MainMenu_Entry.MainMenu_Entry
 ServerDefaultMap=/Game/Maps/MainMenu_Entry
 GlobalDefaultGameMode=/Game/Base/SurvivalCoopGameModeSetup.SurvivalCoopGameModeSetup_C
 GlobalDefaultServerGameMode=None
-
