updated for superstreamer

--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -18,7 +18,7 @@ LocalPlayerClassName=/Script/SurvivalGame.SLocalPlayer
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
-DefaultCursor=/Engine/VREditor/UI/VRRadialCrosshair.VRRadialCrosshair_C
+DefaultCursor=None
 TextEditBeamCursor=None
 CrosshairsCursor=None
 GrabHandCursor=None
@@ -117,3 +117,6 @@ GameDefaultMap=/Game/Maps/MainMenu_Entry.MainMenu_Entry
 ServerDefaultMap=/Game/Maps/MainMenu_Entry
 GlobalDefaultGameMode=/Game/Base/SurvivalCoopGameModeSetup.SurvivalCoopGameModeSetup_C
 GlobalDefaultServerGameMode=None
+
+[Core.Log]
+LogActor=Error
