--- a/SurvivalGame/Config/DefaultGame.ini
+++ b/SurvivalGame/Config/DefaultGame.ini
@@ -7,16 +7,25 @@ LicensingTerms=
 PrivacyPolicy=
 ProjectID=00000000000000000000000000000000
 ProjectName=Survival Sample Game
-ProjectVersion=
+ProjectVersion=1.0
 SupportContact=
 ProjectDisplayedTitle=Survival SampleGame
 MaxFPS=60
-NumOfPlayers=2
+NumOfPlayers=0
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-BuildConfiguration=PPBC_DebugGame
-ForDistribution=True
-IncludeDebugFiles=False
+BuildConfiguration=PPBC_Shipping
+ForDistribution=False
+IncludeDebugFiles=True
 UsePakFile=False
 FullRebuild=False
+LowQualityTextureScale=0.250000
+SuperStreamerDownloadServerUrl="http://localhost:3000/download"
+bGenerateForSuperStreamer=True
+bUploadToSuperStreamerServer=True
+SuperStreamerServerUrl="http://localhost:3000/upload"
+SuperStreamerSecretKey=c71d-3415-88d0-5acd-b925-6359-91e5-61a0
+StagingDirectory=(Path="C:/Games/EpicSurvivalGameSeries/SurvivalGame/Builds")
+SuperStreamerGameKey=4
+IncludePrerequisites=False
 
