--- a/SurvivalGame/SurvivalGame.uproject
+++ b/SurvivalGame/SurvivalGame.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.14",
+	"EngineAssociation": "{BC92AED0-42C2-E3A8-3F2C-08869EC4F10E}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
