--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -18,7 +18,7 @@ LocalPlayerClassName=/Script/SurvivalGame.SLocalPlayer
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
-DefaultCursor=/Engine/VREditor/UI/VRRadialCrosshair.VRRadialCrosshair_C
+DefaultCursor=None
 TextEditBeamCursor=None
 CrosshairsCursor=None
 GrabHandCursor=None
