removed damage to player

--- a/SurvivalGame/SurvivalGame.uproject
+++ b/SurvivalGame/SurvivalGame.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.14",
+	"EngineAssociation": "{EFC24FF8-42CE-3E02-922E-4F8F28A72160}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
