--- a/SurvivalGame/Config/DefaultGame.ini
+++ b/SurvivalGame/Config/DefaultGame.ini
@@ -11,4 +11,8 @@ ProjectVersion=
 SupportContact=
 ProjectDisplayedTitle=Survival SampleGame
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+IncludeDebugFiles=True
+UsePakFile=False
+StagingDirectory=(Path="../../../../EpicSurvivalGameSeries/SurvivalGame/Builds")
 
