--- a/SurvivalGame/Config/DefaultGame.ini
+++ b/SurvivalGame/Config/DefaultGame.ini
@@ -11,4 +11,8 @@ ProjectVersion=
 SupportContact=
 ProjectDisplayedTitle=Survival SampleGame
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+IncludePrerequisites=False
+UsePakFile=False
+IncludeDebugFiles=True
 
