tweaked settings for better performance

--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -8,6 +8,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 ; Our custom LocalPlayer class
 LocalPlayerClassName=/Script/SurvivalGame.SLocalPlayer
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=30.000000),UpperBound=(Type=Exclusive,Value=200.000000))
+MinDesiredFrameRate=90.000000
+bUseFixedFrameRate=False
+bSmoothFrameRate=True
+FixedFrameRate=60.000000
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
@@ -23,8 +28,8 @@ UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.
 [/Script/Engine.RendererSettings]
 r.MobileHDR=True
 r.AllowOcclusionQueries=True
-r.MinScreenRadiusForLights=0.030000
-r.MinScreenRadiusForDepthPrepass=0.030000
+r.MinScreenRadiusForLights=0.100000
+r.MinScreenRadiusForDepthPrepass=0.100000
 r.PrecomputedVisibilityWarning=False
 r.TextureStreaming=True
 Compat.UseDXT5NormalMaps=False
@@ -52,6 +57,8 @@ r.ClearSceneMethod=1
 r.WireframeCullThreshold=5.000000
 UIScaleRule=ShortestSide
 UIScaleCurve=(EditorCurveData=(Keys=),ExternalCurve=None)
+r.Mobile.DisableVertexFog=True
+r.MinScreenRadiusForCSMDepth=0.050000
 
 [/Script/Engine.RecastNavMesh]
 bDistinctlyDrawTilesBeingBuilt=True
@@ -157,4 +164,5 @@ InitialAverageFrameRate=0.016667
 +PhysicalSurfaces=(Type=SurfaceType2,Name="ZombieBody")
 +PhysicalSurfaces=(Type=SurfaceType3,Name="ZombieHead")
 +PhysicalSurfaces=(Type=SurfaceType4,Name="ZombieLimb")
+
 
