--- a/SurvivalGame/Config/DefaultGame.ini
+++ b/SurvivalGame/Config/DefaultGame.ini
@@ -14,5 +14,6 @@ ProjectDisplayedTitle=Survival SampleGame
 [/Script/UnrealEd.ProjectPackagingSettings]
 IncludePrerequisites=False
 UsePakFile=False
-IncludeDebugFiles=True
+IncludeDebugFiles=False
+BuildConfiguration=PPBC_Shipping
 
