--- a/SurvivalGame/Config/DefaultEngine.ini
+++ b/SurvivalGame/Config/DefaultEngine.ini
@@ -10,9 +10,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 LocalPlayerClassName=/Script/SurvivalGame.SLocalPlayer
 SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=30.000000),UpperBound=(Type=Exclusive,Value=200.000000))
 MinDesiredFrameRate=90.000000
-bUseFixedFrameRate=False
+bUseFixedFrameRate=True
 bSmoothFrameRate=True
-FixedFrameRate=60.000000
+FixedFrameRate=20.000000
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
@@ -164,5 +164,3 @@ InitialAverageFrameRate=0.016667
 +PhysicalSurfaces=(Type=SurfaceType2,Name="ZombieBody")
 +PhysicalSurfaces=(Type=SurfaceType3,Name="ZombieHead")
 +PhysicalSurfaces=(Type=SurfaceType4,Name="ZombieLimb")
-
-
